src/test/ui/parser/keyword-unsafe-as-identifier.stderr
error: expected identifier, found keyword `unsafe`
  --> $DIR/keyword-unsafe-as-identifier.rs:4:9
   |
LL |     let unsafe = "foo";
   |         ^^^^^^ expected identifier, found keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL |     let r#unsafe = "foo";
   |         ^^^^^^^^

error: aborting due to previous error

