src/test/ui/parser/keyword-unsafe-as-identifier.rs
// This file was auto-generated using 'src/etc/generate-keyword-tests.py unsafe'

fn main() {
    let unsafe = "foo"; //~ error: expected identifier, found keyword `unsafe`
}
